# vcf2maf-lite

./: .gitignore  Dockerfile  README.md  pypi.md  pyproject.toml  vcf2maf_lite.py
.github/workflows/: publish_docker_image.yml  publish_to_pypi.yml  publish_to_testpypi.yml  tests.yaml
test/: vcf2maf_lite_tests.py
tests/: vcf2maf_lite_tests.py
vcf2maf_lite/: vcf2maf_lite.py
